<resources>
    <string name="app_name">AndroidPractise5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu">Main Menu</string>
    <string name="input_text"> Input text here</string>
    <string name="press_this">Display New Text</string>
    <string name="coach">Coach</string>
    <string name="sportsman">sportsman</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="return_button">Return</string>
    <string name="submit">Submit</string>
    <string name="notification_button">Display notification</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="return_to_fragment">Return to fragment</string>
    <string name="textview">TextView</string>
</resources>